# rig-examples

./: .gitignore  README.md
hello/: Cargo.toml
hello/src/: main.rs
k8s-ai-operator/: Cargo.toml
k8s-ai-operator/manifests/: test_aioperator.yaml
k8s-ai-operator/src/: aioperator.rs  context.rs  crd.rs  error.rs  finalizer.rs  main.rs
