cargo-features = ["edition2024"]

[package]
name = "k8s-ai-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures-util = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
log = "0.4.27"
pretty_env_logger = "0.5.0"
rig-core = "0.10.0"
schemars = "0.8.22"
serde = "1.0.219"
serde_json = "1.0.140"
sha2 = "0.10.8"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
